# species-simulation

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.yaml  config_balanced.yaml  pyproject.toml  requirements.txt  simulation.py  visualizer.py
.github/workflows/: ci.yml
docs/: README.md
