[project]
name = "predator-prey-simulation"
version = "0.1.0"
description = "A 2D grid-based predator-prey ecosystem simulation with visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kai"}
]
keywords = ["simulation", "ecosystem", "predator-prey", "visualization", "pygame"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/predator-prey-simulation"
Repository = "https://github.com/YOUR_USERNAME/predator-prey-simulation"
Issues = "https://github.com/YOUR_USERNAME/predator-prey-simulation/issues"

[project.scripts]
prey-sim = "simulation:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
